--- a/popup.css
+++ b/popup.css
@@ -15,6 +15,26 @@ body{
     margin: 0;
 }
 
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: var(--Primary); 
+    -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0.5); 
+}
+
+
 nav{
     display: flex;
     flex-direction: row;
@@ -26,10 +46,45 @@ nav{
 }
 
 nav .logo{
+    position: relative;
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 5px;
+}
+
+.logo svg{
+    margin-left: 5px;
+    margin-top: 7px;
+}
+
+.logo .changes-dropdown{
+    position: relative;
+    display: inline-block;
+}
+
+.changes-dropdown .dropdownContent{
+    position: absolute;
+    display: none;
+    flex-direction: column;
+    background-color: #4E4B45;
+    border-radius: 5px;
+    padding: 10px;
+    color: white;
+    width: 800%;
+    max-height: 150px;
+    z-index: 2;
+    overflow-y: scroll;
+}
+
+
+.dropdownContent *{
+    margin: 0;
+    padding: 0;
+}
+
+.dropdownContent p{
+    margin-bottom: 10px;
 }
 
 nav img{
@@ -59,7 +114,7 @@ nav svg:hover{
 }
 
 .partnum-container{
-    display: none;
+    display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
@@ -105,7 +160,7 @@ h3{
 }
 
 .emailContainer{
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
@@ -125,14 +180,6 @@ h3{
     color: white;
 }
 
-.varContainer div{
-    display: flex;
-    flex-direction: row;
-    background-color: var(--secondary);
-    padding: 5px;
-    border-radius: 5px;
-}
-
 .varContainer div p{
     margin-right: 5px;
 }
@@ -141,6 +188,7 @@ h3{
     background: none;
     border: none;
     color: white;
+    width: 50%;
 }
 
 .varContainer div input::placeholder{
@@ -162,6 +210,23 @@ h3{
     transition: all .3s ease;
 }
 
+.varContainer .left{
+    display: flex;
+    flex-direction: row;
+    background-color: var(--secondary);
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.left div{
+    display: flex;
+    flex-direction: row;
+    align-items: center !important;
+    background-color: var(--secondary);
+    padding: 5px;
+    border-radius: 5px;
+}
+
 .varContainer button:hover{
     box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75);
 }
@@ -169,11 +234,13 @@ h3{
 .varContainer .right{
     background-color: var(--Primary);
     cursor: pointer;
+    padding: 4.5px;
+    border-radius: 5px;
     transition: all .3s ease;
 }
 
 .varContainer .right:hover{
-    background-color: var(--secondary);
+    background-color: #cfa600;
 }
 
 .emailContainer .exampleEmail{
@@ -221,4 +288,57 @@ h3{
 
 .exampleEmail span{
     color: var(--Primary);
+}
+
+.opening{
+    position: relative;
+    display: inline-block !important;
+
+    margin: 0px 15px 0px 3px;
+    background: none !important;
+}
+
+.openingToggle{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #4E4B45;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    padding: 9px 5px 9px 5px !important;
+}
+
+.opening *{
+    cursor: pointer;
+}
+
+.opening input{
+    width: 100% !important;
+}
+
+.opening svg{
+    transition: all .2s ease;
+}
+
+.dropdown{
+    position: absolute;
+    display: none;
+    flex-direction: column !important;
+    z-index: 2;
+    width: 100%;
+    border-radius: 0;
+    padding: 0px !important;
+    background-color: #4E4B45;
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+.dropdown p{
+    padding: 2px;
+    margin: 0 !important;
+}
+
+.dropdown p:hover{
+    background-color: #68645c;
 }
